fixed borders on small phone screens

--- a/imel/css/style.css
+++ b/imel/css/style.css
@@ -23,6 +23,7 @@ body {
 	background-color: white;
 	padding: 0.5em 0.5em 0 0.5em;
 	margin: 0 auto 0 auto;
+	width: 100%;
 	max-width: 50em;	
 }
 
